k8s/backend-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-backend-internal
  annotations:
    prometheus.io/port: "9080"
    prometheus.io/scrape: "true"
spec:
  selector:
    app: devops-demo-backend
  ports:
  - name: http
    port: 9080
    targetPort: 9080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devops-demo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-demo-backend
  template:
    metadata:
      labels:
        app: devops-demo-backend
    spec:
      containers:
      - name: devops-demo-backend
        image: mycluster.icp:8500/demo/devops-demo-backend:0.3
        ports:
        - containerPort: 9080
---
kind: Service
apiVersion: v1
metadata:
  name: devops-demo-backend-external
spec:
  type: NodePort
  selector:
    app: devops-demo-backend
  ports:
    - name: http
      nodePort: 30111
      port: 9080
