k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME-external
  labels:
    app: APP_NAME
spec:
  type: ClusterIP
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    instance-release: APPSELECTOR
